...
    <string name="btnAdd">Add</string>

    <!-- CheckBox Values -->
    <string name="termsAndConditions">Terms and Conditions</string>

    <!-- Login/Registration Errors -->
    <string name="enterName">Please Enter Your Full Name</string>
    <string name="enterEmail">Please Enter A Valid Email Address</string>
    <string name="enterPassword">Please enter a Password</string>

    <string name="invalidLogin">Please Enter a Valid Email and Password</string>
    <string name="invalidPassword">Please Enter Valid Password</string>

    <string name="passwordContainNumber">Password Should Contain At Least One Digit</string>
    <string name="passwordContainLowercase">Password Should Contain At Least One Lowercase Character</string>
    <string name="passwordContainUppercase">Password Should Contain At Least One Uppercase Character</string>
    <string name="passwordLength">Password Should Be At Least 8 Characters Long</string>
    <string name="passwordsMatch">Passwords Do Not Match</string>

    <string name="readTermsAndConditions">Please Read the Terms and Conditions</string>

    <string name="emailExists">Email Already in Use</string>
    <string name="databaseError">An error occurred</string>

    <!-- Profile Page -->
    <string name="profile_title">User Profile</string>
    <string name="full_name">Full Name</string>
    <string name="hint_full_name">Enter Full Name</string>
...
