<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginScreen">

    <ImageView
        android:id="@+id/imageView"
...
        android:layout_marginStart="11dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="80dp"
        android:onClick="btnLoginUser"
        android:text="@string/btnLoginString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginScreenBtnRegister"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenPassword" />

    <Button
        android:id="@+id/loginScreenBtnRegister"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
...
